[tool.poetry]
name = "mutation-testing"
version = "0.1.0"
description = "Kata performed for the PYCONES2023"
authors = [
    "Juán Miguel Álvarez Tosco <jalvarez@fmit-solutions.com>",
    "Carlos López Pérez <clopez@fmit-solutions.com>",
]
readme = "README.md"
packages = [{ include = "pycon2023" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mutmut = "^2.4.4"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
safari = { shell = '(open -g -a Safari "html/index.html") &' }
delete_cache = { shell = "rm -rf .coverage .mutmut-cache html" }
install = "poetry install"
run = { shell = "poetry run mutmut run ; poetry run mutmut results" }
mutation_html = "poetry run mutmut html"
pytest = "poetry run pytest --cov=pycon2023 tests/"
test = "poetry run pytest tests/"
show = "poetry run mutmut show"
apply = "poetry run mutmut apply"
init = ["install", "delete_cache", "pytest", "run", "mutation_html", "safari"]

[tool.poe.tasks.select]
sequence = ["show $mutant", "apply $mutant", "test"]

[tool.poe.tasks.select.args.mutant]
required = true
positional = true
#options = ["-m", "--mutant"]
help = "Mutant identifier, represented as a number"
#args = [{ name = "mutant", help = "Number of the mutant" }]

[tool.coverage.run]
omit = ["__init__.py", "main.py"]
